--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "blade_language": "^1.0.0",
     "downloadjs": "^1.4.7",
     "html-react-parser": "^3.0.7",
     "monaco-editor": "^0.34.1",
